--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" type="text/css" href="quiz.css">
 
-<script src="quiz_login.js"></script>
+<script src="game_login.js"></script>
 </head>
 <body>
 
